{
    "name": "GamePlay_Xbox_Controller",
    "maps": [
        {
            "name": "GamePlay_Xbox_Contoller",
            "id": "40194887-bc41-4fbb-b58f-f6204586bb00",
            "actions": [
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "1995f86e-4452-48ec-9c0e-a1017690cd12",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LookCamera",
                    "type": "PassThrough",
                    "id": "da7e254b-b383-4c3e-a306-a2d0c71ec171",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "a5df06c6-b697-43d5-801c-3e1f9167970a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c0e0a32c-b85c-4093-be8f-33d781c45866",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07fe0ec5-e4dd-41a9-91fc-e45efefb7dab",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LookCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e50abec5-a7e0-41d3-bea5-405c5132cb74",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}